@@ -35,7 +35,7 @@ public class TrebuchetPartTwo {
                     .forEach(e -> numbers.add(NUMBERS.indexOf(e) + 1));
             }
 
-            calibrationValue += numbers.get(0) * 10 + numbers.get(numbers.size() - 1);
+            calibrationValue += numbers.getFirst() * 10 + numbers.getLast();
         }
 
         return calibrationValue;
